--- a/Order/Order.html
+++ b/Order/Order.html
@@ -14,149 +14,156 @@
 
 <body>
     <div class="text">Order</div>
-    <p class="leatherName lbe">Leather</p>
-    <div class="leather">
-        <div class="leatherFullGrain">
-            <img src="/Offers/assets/Full grain Leather.png">
-          <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <div class="leatherBio bio1">
-                Name: Full grain leather;
-                <br>
-                Cost: 75€;
+    <div class="item">
+        <p class="leatherName lbe">Leather</p>
+        <div class="leather">
+            <div class="leatherFullGrain">
+                <img src="/Offers/assets/Full grain Leather.png">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <div class="leatherBio bio1">
+                    Name: Full grain leather;
+                    <!-- Stavis svoj leather type-->
+                    <br>
+                    Cost: 87€;
+                    <!-- Stavis svoju cenu-->
+                </div>
+            </div>
+            <div class="leatherTopGrain">
+                <img src="/Offers/assets/TopGrainLeather.jpg">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <div class="leatherBio bio2">
+                    Name: Top grain leather;
+                    <br>
+                    Cost: 78€;
+                </div>
+            </div>
+            <div class="leatherFauxGrain">
+                <img src="/Offers/assets/fauxLeather.jpg">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <div class="leatherBio bio3">
+                    Name: Faux leather;
+                    <br>
+                    Cost: 42€;
+                </div>
+            </div>
+            <div class="leatherBondedGrain">
+                <img src="/Offers/assets/bondedLeather.jpg">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <div class="leatherBio bio4">
+                    Name: Bonded leather;
+                    <br>
+                    Cost: 69€;
+                </div>
             </div>
         </div>
-        <div class="leatherTopGrain">
-            <img src="/Offers/assets/TopGrainLeather.jpg">
-              <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <div class="leatherBio bio2">
-                Name: Top grain leather;
-                <br>
-                Cost: 70€;
+        <p class="paperName lbe">Paper</p>
+        <div class="paper">
+            <div class="paper-content">
+                <div class="greenPaper">
+                    <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                    <img src="/Offers/assets/greenPaper.jpg">
+                    <p class="paperBio">
+                        Name: Green Paper;
+                        <br>
+                        Cost: 4€;
+                    </p>
+                </div>
+                <div class="yellowPaper">
+                    <img src="/Offers/assets/yellowPaper.jpg">
+                    <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                    <p class="paperBio">
+                        Name: Yellow Paper;
+                        <br>
+                        Cost: 3€;
+                    </p>
+                </div>
+                <div class="bluePaper">
+                    <img src="/Offers/assets/bluePaper.jpg">
+                    <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                    <p class="paperBio">
+                        Name: Blue Paper;
+                        <br>
+                        Cost: 4€;
+                    </p>
+                </div>
+                <div class="paperRed">
+                    <img src="/Offers/assets/redPaper.jpg">
+                    <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                    <p class="paperBio">
+                        Name: Red Paper;
+                        <br>
+                        Cost: 6€;
+                    </p>
+                </div>
+                <div class="paperWhite">
+                    <img src="/Offers/assets/White Paper.png">
+                    <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                    <p class="paperBio">
+                        Name: White Paper;
+                        <br>
+                        Cost: 11€;
+                    </p>
+                
+                </div>
+                <div class="paperBlack">
+                    <img src="/Offers/assets/blackPaper.jpg">
+                    <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                    <p class="paperBio">
+                        Name: Black Paper;
+                        <br>
+                        Cost: 16€;
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="leatherFauxGrain">
-            <img src="/Offers/assets/fauxLeather.jpg">
-          <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
 
-            <div class="leatherBio bio3">
-                Name: Faux leather;
-                <br>
-                Cost: 35€;
+        </div>
+        <p class="emblemName lbe">Emblem</p>
+        <div class="emblem">
+            <div class="pattern">
+                <img src="/Offers/assets/pattern 1.webp">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <p class="emblemBio bio">
+                    Type: PLATEAU 1710; ;
+                    <br>
+                    Cost: 25€;
+                </p>
             </div>
-        </div>
-        <div class="leatherBondedGrain">
-            <img src="/Offers/assets/bondedLeather.jpg">
-          <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <div class="leatherBio bio4">
-                Name: Bonded leather;
-                <br>
-                Cost: 55€;
+            <div class="pattern">
+                <img src="/Offers/assets/pattern 2.jpg">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <p class="emblemBio bio">
+                    Type: STINGRAY 1704;
+                    <br>
+                    Cost: 15€;
+                </p>
             </div>
-        </div>
-    </div>
-    <p class="paperName lbe">Paper</p>
-    <div class="paper">
-        <div class="greenPaper">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <img src="/Offers/assets/greenPaper.jpg">
-            <p class="paperBio">
-                Name: Green Paper;
-                <br>
-                Cost: 5€;
-            </p>
-        </div>
-        <div class="yellowPaper">
-            <img src="/Offers/assets/yellowPaper.jpg">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="paperBio">
-                Name: Yellow Paper;
-                <br>
-                Cost: 5€;
-            </p>
-        </div>
-        <div class="bluePaper">
-            <img src="/Offers/assets/bluePaper.jpg">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-
-            <p class="paperBio">
-                Name: Blue Paper;
-                <br>
-                Cost: 5€;
-            </p>
-        </div>
-        <div class="paperWhite">
-            <img src="/Offers/assets/White Paper.png">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-
-            <p class="paperBio">
-                Name: White Paper;
-                <br>
-                Cost: 10€;
-            </p>
-        </div>
-        <div class="paperBlack">
-            <img src="/Offers/assets/blackPaper.jpg">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="paperBio">
-                Name: Black Paper;
-                <br>
-                Cost: 15€;
-            </p>
-        </div>
-        <div class="paperRed">
-            <img src="/Offers/assets/redPaper.jpg">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="paperBio">
-                Name: Red Paper;
-                <br>
-                Cost: 5€;
-            </p>
-        </div>
-    </div>
-    <p class="emblemName lbe">Emblem</p>
-    <div class="emblem">
-        <div class="pattern">
-            <img src="/Offers/assets/pattern 1.webp">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="emblemBio bio">
-                Type: PLATEAU 1710; ;
-                <br>
-                Cost: 25€;
-            </p>
-        </div>
-        <div class="pattern">
-            <img src="/Offers/assets/pattern 2.jpg">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="emblemBio bio">
-                Type: STINGRAY 1704;
-                <br>
-                Cost: 5€;
-            </p>
-        </div>
-        <div class="pattern">
-            <img src="/Offers/assets/pattern 3.webp">
-        <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="emblemBio bio">
-                Type: DIAMOND STITCH 1705;
-                <br>
-                Cost: 15€;
-            </p>
-        </div>
-        <div class="pattern">
-            <img src="/Offers/assets/pattern 4.webp">
-            <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" --> 
-            <p class="emblemBio bio">
-                Type: BUBBLES 1707;
-                <br>
-                Cost: 5€;
-            </p>
+            <div class="pattern">
+                <img src="/Offers/assets/pattern 3.webp">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <p class="emblemBio bio">
+                    Type: DIAMOND STITCH 1705;
+                    <br>
+                    Cost: 30€;
+                </p>
+            </div>
+            <div class="pattern">
+                <img src="/Offers/assets/pattern 4.webp">
+                <!-- png zamenis sa slikom i stavis ga u ovaj folder "/Offers/assets/" -->
+                <p class="emblemBio bio">
+                    Type: BUBBLES 1707;
+                    <br>
+                    Cost: 35€;
+                </p>
+            </div>
         </div>
     </div>
     <button class="nextBtn">Next</button>
     <button class="prevBtn">Back</button>
     <div class="form">
         <form>
-
+            <input class="name" type="text" placeholder="Enter your Full name">
+            <input class="address" type="text" placeholder="Enter your full address">
+            <input class="contact" id="phoneNumber" type="text"  placeholder="Enter your cell phone number">
         </form>
     </div>
     <div class="order-summary"></div>
@@ -164,4 +171,5 @@
 </body>
 <script src="script.js">
 </script>
+
 </html>
