--- a/Index.html
+++ b/Index.html
@@ -121,6 +121,14 @@
             <div class="guide">
                 <p class="guideText">Hint: Scroll Down</p>
             </div>
+    <div class="menuNav">
+    <div class="menuBar">
+        <div class="galleryBar"></div>
+        <div class="offersBar"></div>
+        <div class="bioBar"></div>
+        <div class="orderBar"></div>
+    </div>
+    </div>
         </div>
         <script src=script.js>
         </script>
