--- a/Offers/offers.html
+++ b/Offers/offers.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="style.css">
     <title>Scavenger</title>
 </head>
-
 <body>
     <div class="text">Offers</div>
     <p class="leatherName">Leather</p>
@@ -105,7 +103,7 @@
         <div class="pattern">
             <img src="assets/pattern 1.webp">
             <p class="emblemBio">
-                Type: PLATEAU 1710;                ;
+                Type: PLATEAU 1710;
                 <br>
                 Cost: 25€;
             </p>
@@ -135,9 +133,201 @@
             </p>
         </div>
     </div>
+    <p class="modelName">Model</p>
+    <div class="model">
+        <div class="whiteEdition">
+            <img src="/Gallery/assets/White Edition/5b.jpg">
+            <p class="modelBio">
+                <!--Ovde menjas text i cene -->
+                Name: White Edition;
+                Handmade sketchbook, every part is handmade including the belt.
+                Real white leather, leather binding. Suitable for drawing and writing.
+                Quality low grammage paper inside.
+                For closing the sketchbook, a leather belt with two metal buckles is used.
+                This leather is unique, which makes the sketchbook a limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing.
+                For gifts, enter your desired message and I will include it in the box with the sketchbook.
+                Cost: 70€;
+            </p>
+        </div>
+        <div class="purpleEdition">
+            <img src="/Gallery/assets/ljubicasti KAISEVI/6a.JPG">
+            <p class="modelBio">
+                <!--Ovde menjas text i cene -->
+                Name: Purple Edition;
+                <br>
+                Handmade hardcover sketchbook, every part is handmade.
+                Real purple leather, leather binding. Suitable for drawing and writing.
+                Quality low grammage paper inside.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, drawing, and writing.
+                <br>
+                Cost: 70€;
+            </p>
+        </div>
+        <div class="greenEdition">
+            <img src="/Gallery/assets/mali zeleni/11c.JPG">
+            <p class="modelBio">
+                <!--Ovde menjas text i cene -->
+                Name: Green Edition;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 50€;
+            </p>
+        </div>
+        <div class="beigeEdition">
+            <img src="/Gallery/assets/KREM grafike/9a.JPG">
+            <p class="modelBio">                
+                Name: Beige Edition;
+                <br>
+                Handmade sketchbook, every part is handmade including the prints inside.
+                Real beige leather, leather binding. Suitable for drawing, painting, and writing.
+                Quality paper inside including hand-printed prints, produced by the process of etching and linocut.
+                For closing the sketchbook, two leather belts are used.
+                The prints are one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing.
+                <br>
+                Cost: 120€;
+            </p>
+        </div>
+        <div class="redEdition">
+            <img src="/Gallery/assets/Red invertedLeather/2a.JPG">
+            <p class="modelBio">
+                Name: Red Edition;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 70€;
+            </p>
+        </div>
+        <div class="blackEdition">
+            <img src="/Gallery/assets/crni blok GRAFIKE/8c.JPG">
+            <p class="modelBio">
+                Name: Black Edition II;
+                <br>
+                Handmade sketchbook, every part is handmade including the prints inside.
+                Real black rustic leather, leather binding. Suitable for drawing, painting, and writing.
+                Quality paper inside including hand-printed prints, produced by the process of etching.
+                For closing the sketchbook, two leather belts are used.
+                The prints are one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing.
+                <br>
+                Cost: 120€;
+            </p>
+        </div>
+        <div class="redEdition2">
+            <img src="/Gallery/assets/RedRegular/3b.JPG">
+            <p class="modelBio">
+                Name: Red Edition;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 70€;
+            </p>
+        </div>
+        <div class="blackEdition2">
+            <img src="/Gallery/assets/Crni/12a.jpg">
+            <p class="modelBio">
+                Name: black Edition;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 69€;
+            </p>
+        </div>
+        <div class="lilRedEdition">
+            <img src="/Gallery/assets/mali crveni/10e.JPG">
+            <p class="modelBio">
+                Name: Lil Red Edition;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 80€;
+            </p>
+        </div>
+        <div class="purpleBlkEdition">
+            <img src="/Gallery/assets/ljubicasti crni papiri/7c.JPG">
+            <p class="modelBio">
+                Name: Purple with Black papers;
+                Handmade sketchbook, every part is handmade <br>
+                including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 99€;
+            </p>
+        </div>
+        <div class="greenInvEdition">
+            <img src="/Gallery/assets/zeleni PREVRNUTA KOZA/4c.JPG">
+            <p class="modelBio">
+                Name: Green with inverted leather;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 70€;
+            </p>
+        </div>
+        <div class="allBlackEdition">
+            <img src="/Gallery/assets/skroz crni blok BLACK EDITION/1c.JPG">
+            <p class="modelBio">
+                Name: Blackeggedon ;
+                <br>
+                Handmade sketchbook, every part is handmade including the belt.
+                Real green leather, leather binding. Suitable for drawing, and writing.
+                Quality paper inside, low grammage paper.
+                For closing the sketchbook, one leather belt with a metal buckle is used.
+                The leather is one of a kind, which makes the sketchbook limited edition.
+                Great idea for a gift for someone who enjoys books, writing, and drawing
+                <br>
+                Cost: 70€;
+            </p>
+        </div>
+    </div>
+    <div class="menuNav">
+    <div class="menuBar">
+        <div class="homeBar"></div>
+        <div class="galleryBar"></div>
+        <div class="bioBar"></div>
+        <div class="orderBar"></div>
+    </div>
+    </div>
     <button class="orderBtn">Order</button>
     <p class="footer">-SCAVENGER-</p>
-
 </body>
 <script src="script.js"></script>
+
 </html>
