--- a/Order/Order.html
+++ b/Order/Order.html
@@ -161,12 +161,20 @@
     <button class="prevBtn">Back</button>
     <div class="form">
         <form>
-            <input class="name" type="text" placeholder="Enter your Full name">
-            <input class="address" type="text" placeholder="Enter your full address">
-            <input class="contact" id="phoneNumber" type="text"  placeholder="Enter your cell phone number">
+            <input class="name" type="text" placeholder="Enter your Full name" required>
+            <input class="address" type="text" placeholder="Enter your full address" required>
+            <input class="contact" id="phoneNumber" type="text"  placeholder="Enter your cell phone number" required>
         </form>
     </div>
-    <div class="order-summary"></div>
+    <div class="menuNav">
+        <div class="menuBar">
+            <div class="homeBar"></div>
+            <div class="galleryBar"></div>
+            <div class="offersBar"></div>
+            <div class="bioBar"></div>
+        </div>
+        </div>
+        <div class="order-summary"></div>        
     <p class="footer">-SCAVENGER-</p>
 </body>
 <script src="script.js">
