--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -142,6 +142,14 @@
         </div>
       </div>
     </div>
+    <div class="menuNav">
+      <div class="menuBar">
+          <div class="homeBar"></div>
+          <div class="offersBar"></div>
+          <div class="orderBar"></div>
+          <div class="bioBar"></div>
+      </div>
+      </div>
     <p class="footer">-SCAVENGER-</p>
   </div>
 
